tests/neg/i15507.check
-- Error: tests/neg/i15507.scala:3:40 ----------------------------------------------------------------------------------
3 |  type _NestedSet1[X] = Set[_NestedSet1[?]] // error
  |                                        ^
  |                                        no wildcard type allowed here
-- Error: tests/neg/i15507.scala:4:41 ----------------------------------------------------------------------------------
4 |  type _NestedSet2[X] <: Set[_NestedSet2[?]] // error
  |                                         ^
  |                                         no wildcard type allowed here
-- [E140] Cyclic Error: tests/neg/i15507.scala:6:7 ---------------------------------------------------------------------
6 |  type _NestedSet4[X] >: Set[_NestedSet4[X]] // error
  |       ^
  |       illegal cyclic type reference: lower bound ... of type _NestedSet4 refers back to the type itself
  |
  |       The error occurred while trying to compute the signature of type _NestedSet4
  |         which required to explore type _NestedSet4 for cyclic references
  |
  |        Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
-- [E140] Cyclic Error: tests/neg/i15507.scala:7:7 ---------------------------------------------------------------------
7 |  type _NestedSet5[X] = Set[_NestedSet5[X]] // error
  |       ^
  |       illegal cyclic type reference: alias ... of type _NestedSet5 refers back to the type itself
  |
  |       The error occurred while trying to compute the signature of type _NestedSet5
  |         which required to explore type _NestedSet5 for cyclic references
  |
  |        Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
-- [E140] Cyclic Error: tests/neg/i15507.scala:8:7 ---------------------------------------------------------------------
8 |  type _NestedSet6[X] = Set[_NestedSet6[Int]] // error
  |       ^
  |       illegal cyclic type reference: alias ... of type _NestedSet6 refers back to the type itself
  |
  |       The error occurred while trying to compute the signature of type _NestedSet6
  |         which required to explore type _NestedSet6 for cyclic references
  |
  |        Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
-- Error: tests/neg/i15507.scala:10:43 ---------------------------------------------------------------------------------
10 |  type _NestedList1[X] = List[_NestedList1[?]] // error
   |                                           ^
   |                                           no wildcard type allowed here
-- Error: tests/neg/i15507.scala:11:44 ---------------------------------------------------------------------------------
11 |  type _NestedList2[X] <: List[_NestedList2[?]] // error
   |                                            ^
   |                                            no wildcard type allowed here
-- [E140] Cyclic Error: tests/neg/i15507.scala:13:7 --------------------------------------------------------------------
13 |  type _NestedList4[X] >: List[_NestedList4[X]] // error
   |       ^
   |       illegal cyclic type reference: lower bound ... of type _NestedList4 refers back to the type itself
   |
   |       The error occurred while trying to compute the signature of type _NestedList4
   |         which required to explore type _NestedList4 for cyclic references
   |
   |        Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
-- [E140] Cyclic Error: tests/neg/i15507.scala:14:7 --------------------------------------------------------------------
14 |  type _NestedList5[X] = List[_NestedList5[X]] // error
   |       ^
   |       illegal cyclic type reference: alias ... of type _NestedList5 refers back to the type itself
   |
   |       The error occurred while trying to compute the signature of type _NestedList5
   |         which required to explore type _NestedList5 for cyclic references
   |
   |        Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
-- [E140] Cyclic Error: tests/neg/i15507.scala:15:7 --------------------------------------------------------------------
15 |  type _NestedList6[X] = List[_NestedList6[Int]] // error
   |       ^
   |       illegal cyclic type reference: alias ... of type _NestedList6 refers back to the type itself
   |
   |       The error occurred while trying to compute the signature of type _NestedList6
   |         which required to explore type _NestedList6 for cyclic references
   |
   |        Run with both -explain-cyclic and -Ydebug-cyclic to see full stack trace.
